--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Funday play n give Karaiskakio</title>
+    <meta name="description" content="Join us at Funday Play n Give at Karaiskakio for a day of fun and charity. Located in Engomi, we offer various activities for all ages.">
+    <meta name="keywords" content="Play n Give, Funday, Karaiskakio, Engomi, charity event, family activities">
 </head>
 <body>
     <!-- Your content goes here -->
