--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <meta name="keywords" content="Play n Give, Funday, Karaiskakio, Engomi, charity event, family activities">
 </head>
 <body>
-    <!-- Your content goes here -->
+    <header>
+        <h1></h1>
+    </header>
+    <main>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+        <div class="image-container">
+            <img src="Etha-Engomis-Flyer1.jpg" alt="Etha Engomis Flyer 1">
+            <img src="Etha-Engomis-Flyer2.jpg" alt="Etha Engomis Flyer 2">
+        </div>
+    </main>
 </body>
 </html>
