--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="image-container">
             <img src="Etha-Engomis-Flyer1.jpg" alt="Etha Engomis Flyer 1">
             <img src="Etha-Engomis-Flyer2.jpg" alt="Etha Engomis Flyer 2">
+            <img src="pricelist.png" alt="Price List">
         </div>
     </main>
 </body>
